Update react bootstrap CSS to fix navbar spacing

--- a/trip-tracker.client/src/App.css
+++ b/trip-tracker.client/src/App.css
@@ -1,5 +1,5 @@
 ﻿#root {
-  max-width: 1280px;
+  max-width: 95%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -17,4 +17,27 @@ th,
 td {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+/* Provide sufficient contrast against white background */
+a {
+  color: #0366d6;
+}
+
+code {
+  color: #e01a76;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+.trip-from {
+  margin: 10% 30% 10% 30%;
+}
+
+.container {
+  width: 90% !important;
 }
