--- a/trip-tracker.client/src/components/styles/NavMenu.css
+++ b/trip-tracker.client/src/components/styles/NavMenu.css
@@ -3,7 +3,9 @@ a.navbar-brand {
   text-align: center;
   word-break: break-all;
 }
-
+.nav-container {
+  flex: 0 1 auto;
+}
 html {
   font-size: 14px;
 }
